--- a/src/components/EmployeeCards/EmployeeCards.scss
+++ b/src/components/EmployeeCards/EmployeeCards.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .card__container {
@@ -16,7 +16,6 @@
     border: 1px solid #ddd;
     padding: 4px;
     margin-bottom: 15px;
-    
 }
 
 .card__name {
@@ -24,6 +23,7 @@
     font-size: 14px;
     font-weight: bold;
     color: black;
+    margin-bottom: 10px;
 }
 
 .card__role {
