search bt name inputfinished and working

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
+  margin: 010px;
 }
 
 .main-title::first-line{
