--- a/src/components/EmployeeCards/EmployeeCards.scss
+++ b/src/components/EmployeeCards/EmployeeCards.scss
@@ -2,15 +2,14 @@
 .card__container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 120px;
     height: 200px   ;
     background-color: rgba(190, 184, 184, 0.498);
     border: 1px solid #ddd;
     padding: 5px;
-    margin-bottom: 2-px;
-    margin-top: 20px;
+    margin: 15px 5px;
     border-radius: 10px;
 }
 
