--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box; 
+  font-family: 'Bebas Neue', sans-serif;
 }
 
 body {
@@ -22,7 +23,8 @@ body {
   color: white;
   text-align: center;
   margin: 30px 30px;
-  font-size: 40px;
+  font-size: 50px;
+  letter-spacing: 3px;
 }
 
 .cards {
