--- a/src/components/EmployeeCards/EmployeeCards.scss
+++ b/src/components/EmployeeCards/EmployeeCards.scss
@@ -15,7 +15,7 @@
 
 .card__name {
     text-align: center;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
     color: black;
     margin-bottom: 10px;
@@ -23,14 +23,16 @@
 
 .card__name::first-letter {
     color:bisque;
-    font-size: 16px;
+    font-size: 20px;
+    letter-spacing: 3px;
 }
 
 .card__role {
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
     color: white;
-    margin: 5px
+    margin: 5px,
+    
 }
 
 .counter__add,
