--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,13 @@
 }
 
 body {
-    background-color: #213547;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-content: center;
+  background: rgb(2,0,36);
+  background: linear-gradient(346deg, rgba(2,0,36,1) 0%, rgba(27,25,111,1) 35%, rgba(0,212,255,1) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  height: 100vh;
 }
 
 .main-title {
